Deleted carosel, added portfolio rows

--- a/index.html
+++ b/index.html
@@ -102,43 +102,8 @@
 	</div><!-- /f -->
 	
 
-	<!-- ========== CAROUSEL SECTION ========== -->	
-	<section id="portfolio" name="portfolio"></section>
-	<div id="portfoliowrap">
-		<div class="container">
-			<div class="row centered">
-				<h3>RECENT PROJECTS</h3>
-				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
-				
-				<div class="col-lg-6 col-lg-offset-3">
-					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-						<!-- Wrapper for slides -->
-						<div class="carousel-inner">
-							<div class="item active centered">
-								<img class="img-responsive" src="assets/img/c1.png" alt="">
-							</div>
-							<div class="item centered">
-								<img class="img-responsive" src="assets/img/c2.png" alt="">
-							</div>
-							<div class="item centered">
-								<img class="img-responsive" src="assets/img/c3.png" alt="">
-							</div>
-						</div>
-						<br>
-						<br>
-						<ol class="carousel-indicators">
-						    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-						    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-						    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-						</ol>
-					</div>
-				</div><!-- col-lg-8 -->
-			</div><!-- row -->
-		</div><!-- container -->
-	</div>	<!-- f -->
-
-
-	<!-- ========== PORTFOLIO SECTION ====== -->    
+	<!-- ========== PORTFOLIO SECTION ====== -->  
+	<section id="portfolio"></section>  
 	<div class="container">
 		<div class="row mt centered ">
 			<div class="col-lg-4 col-lg-offset-4">
@@ -207,7 +172,7 @@
 
 		<div class="row mt centered">
 			<div class="col-lg-4 col-lg-offset-4">
-    			<button type="button" class="btn btn-theme btn-lg">VIEW OUR PORTFOLIO</button>
+    			<button type="button" class="btn btn-theme btn-lg">blog.nmutua.com</button>
 			</div>
 		</div><!-- /row -->
 	</div><!-- /container -->
