added contact icons, resume, blog, links

--- a/index.html
+++ b/index.html
@@ -41,14 +41,22 @@
 			<h1 class="logo"><a href="index.html#home">Autumn</a></h1>
 			<i class="icon-remove menu-close"></i>
 			<a href="#home" class="smoothScroll">Home</a>
-			<a href="#about" class="smoothScroll">About</a>
-			<a href="#portfolio" class="smoothScroll">Portfolio</a>
+      <a href="#about" class="smoothScroll">About</a>
+      <a href="#portfolio" class="smoothScroll">Projects</a>
+			<a href="http://blog.nmutua.com" class="smoothScroll">Blog</a>
+
+      <a href="http://nmutua.com/resume/AutumnFjeld_Software_Resume_2014_03.pdf" target="_blank" class="smoothScroll">Resume</a>
       <a href="#contact" class="smoothScroll">Contact</a>
-			<a href="#contact" class="smoothScroll">Resume</a>
-			<a href="#"><i class="icon-facebook"></i></a>
-			<a href="#"><i class="icon-twitter"></i></a>
-			<a href="#"><i class="icon-dribbble"></i></a>
-			<a href="#"><i class="icon-envelope"></i></a>
+			<a href="https://twitter.com/autaut" target="_blank">
+        <i class="icon-twitter"></i></a>
+			<a href="https://github.com/autumnfjeld" target="_blank">
+        <i class="fa fa-github-alt"></i></a>
+			<a href="mailto:autumn@nmutua.com" target="_blank">
+        <i class="icon-envelope"></i></a>
+      <a href="https://www.linkedin.com/profile/view?id=7000522&trk=nav_responsive_tab_profile" target="_blank">
+        <i class="fa fa-linkedin-square"></i></a>
+      <a href="http://nmutua.com/resume/AutumnFjeld_Software_Resume_2014_03.pdf" target="_blank">
+        <i class="fa fa-bullseye"></i></a>
 		</div>
 		
 		<!-- Menu button -->
@@ -69,9 +77,8 @@
 				<h1>autumn | nmutua</h1>
 				<br>
 				<div class="row">
-					<h3> develop software  
-					<h3> travel </h3>
-					<h3> color </h3>
+					<h2> full stack web developer  </h2>
+					<h2>   <a href="http://blog.nmutua.com">blog.nmutua.com</a> </h2>
 				</div>
 				<div class="col-lg-6 col-lg-offset-3">
 				</div>
@@ -91,11 +98,11 @@
 				
 				<!-- INTRO INFORMATIO-->
 				<div class="col-md-8 col-md-offset-2">
-					<p>I live in San Francisco and am a software engineer interested in full stack web development. I recently worked on a mobile app called <a href="http://signup.plentyy.com">Plentyy</a>, (to be released in the App store Q2 2014) and a <a href="http://wikivizmap.herokuapp.com">data visualization project</a> using d3.js to show a visual node-cloud relationship between wikipeidia articles.
+					<p>I live in San Francisco and am a software engineer interested in full stack web development. I recently worked on a mobile app called <a href="http://signup.plentyy.com">Plentyy</a>, (to be released in the App store Q2 2014) and a Wikipedia <a href="http://wikivizmap.herokuapp.com"> visualization project</a> using d3.js to show a visual node-cloud relationship between wikipeidia articles.
 
-					Over the past year I have transitioned from an engineering career in Materials Science and Computational Fluid Dynamics. Programming was one of the most enjoyable parts of my engineering career: writing custom functions to extend commercial simulation software, data analysis in Matlab, Scheme scripts for automatizing post processing visualization of a fluid flow simulation, and I can even recall a few FORTRAN scripts in Engineering classes.</p>
+					My programming experience spans my background in Materials Science and Computational Fluid Dynamics, topics of my Ph.D. research at UC Berkeley, in which I modeled liquid metal systems. Programming was one of the most enjoyable parts of my engineering career: writing custom functions to extend commercial simulation software, data analysis in Matlab, Scheme scripts for automatizing post-processing visualization of fluid flow simulations, and I can even recall a few FORTRAN scripts in Engineering classes.</p>
 
-					<p>What was missing in all this fun was a personal connection to the systems I was analyzing.  Enter JavaScript and web development. I realized that I could take my programming experience and connect it to something visual and personal. </p>
+					<p>What was missing in all this fun was a personal connection to the systems I was analyzing.  Enter JavaScript and web development. I realized that I could take my programming experience and apply it to build something visual and personally tangible. </p>
 
 					<p>I love the logic of software development and the challenge of finding the best tools and algorithms to build amazing things.</p>
 
@@ -110,21 +117,25 @@
 	  <section id="portfolio" name="portfolio"></section>  
   <div id="portfoliowrap">
     <div class="container">
-    	<div class="row mt">
-    		<div class="col-lg-4 centered si">
-    			<i class="fa fa-flask"></i>
+      <div class="row mt">
+        <h3 class="centered">RECENT PROJECTS</h3>
+    		<div class="col-lg-4 centered si blurb">
+    			<a href="http://youtu.be/AN4371oQ8So" target="_blank">
     			<h4>Plentyy Mobile App</h4>
     			<p>An app to connect local merchant discounts to mobile users. Built with AngularJS, Ionic, Cordova with Firebase data storage.</p>
+          </a>
     		</div>
-    		<div class="col-lg-4 centered si">
-    			<i class="fa fa-eye"></i>
+    		<div class="col-lg-4 centered si blurb">
+    			<a href="http://wikivizmap.herokuapp.com" target="_blank">
     			<h4>WikiViz</h4>
-    			<p>A Graph Visualization of Wikipedia Articles and their Embedded Links. Front end built in AngularJS and d3.js with a backend scraper to extract links from a given wikipedia page. </p>
+    			<p>A Graph Visualization of Wikipedia Articles and their Embedded Links. Front end built in AngularJS and d3.js with a backend scraper to extract links from a given Wikipedia page. </p>
+          </a>
     		</div>
-    		<div class="col-lg-4 centered si">
-    			<i class="fa fa-mobile"></i>
+    		<div class="col-lg-4 centered si blurb">
+          <a href="http://politicalpoke.nmutua.com" target="_blank">
     			<h4>Hackathon Project</h4>
-    			<p>Web application built in AngularJS wired to New York Times API to pull candidate campaign contribution data for a specified politician.</p>
+    			<p>Web application built in AngularJS wired to New York Times API to pull candidate campaign contribution data for a specified politician. An evolving personal project.</p>
+          </a>
     		</div>    	   	
     	</div><!-- /row -->
     </div><!-- /container -->
@@ -143,8 +154,20 @@
 					<h1> Autumn Fjeld </h1>
 					
 					<p>autumn@nmutua.com</p>
-					<!-- <p><button type="button" class="btn btn-warning">YEAH! CONTACT ME NOW!</button></p> -->
-					<p><a href="http://blacktie.co">Credits</a> for the structure of this wonderful theme.</p>
+          <div class="contact-icons">
+            <a href="https://twitter.com/autaut" target="_blank">
+              <i class="icon-twitter"></i></a>
+            <a href="https://github.com/autumnfjeld" target="_blank">
+              <i class="fa fa-github-alt"></i></a>
+            <a href="mailto:autumn@nmutua.com" target="_blank">
+              <i class="icon-envelope"></i></a>
+            <a href="https://www.linkedin.com/profile/view?id=7000522&trk=nav_responsive_tab_profile" target="_blank">
+              <i class="fa fa-linkedin-square"></i></a>
+            <a href="http://nmutua.com/resume/AutumnFjeld_Software_Resume_2014_03.pdf" target="_blank">
+              <i class="fa fa-bullseye"></i></a>
+          </div>
+          <br>
+					<p class="blacktie"><a href="http://blacktie.co" target="_blank">BlackTie credits</a> for the structure of this site.</>
 				</div>
 			</div>
 		</div>
@@ -172,6 +195,6 @@
     });
   </script>   
 
-  
+
 </body>
 </html>
