Update summary and links

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<a href="#home" class="smoothScroll">Home</a>
       <a href="#about" class="smoothScroll">About</a>
       <a href="#portfolio" class="smoothScroll">Projects</a>
-			<a href="http://blog.nmutua.com" class="smoothScroll">Blog</a>
+			<!-- <a href="http://blog.nmutua.com" class="smoothScroll">Blog</a> -->
 
       <a href="http://nmutua.com/assets/resume/AutumnFjeld_Resume_2015_11.pdf" target="_blank" class="smoothScroll">Resume</a>
       <a href="#contact" class="smoothScroll">Contact</a>
@@ -77,8 +77,8 @@
 				<h1>autumn | nmutua</h1>
 				<br>
 				<div class="row">
-					<h2> full stack web developer  </h2>
-					<h2>   <a href="http://blog.nmutua.com">blog.nmutua.com</a> </h2>
+					<h2> front-end web developer  </h2>
+					<!-- <h2>   <a href="http://blog.nmutua.com">blog.nmutua.com</a> </h2> -->
 				</div>
 				<div class="col-lg-6 col-lg-offset-3">
 				</div>
@@ -94,19 +94,26 @@
 		<div class="container">
 			<div class="row">
 				<h3>ABOUT ME</h3>
-				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
+				<div class="centered icons"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></div>
 				
 				<!-- INTRO INFORMATIO-->
-				<div class="col-md-8 col-md-offset-2">
-					<p>I live in San Francisco and am a software engineer interested in full stack web development. I recently worked on a mobile app called <a href="http://signup.plentyy.com">Plentyy</a>, (to be released in the App store Q2 2014) and a Wikipedia <a href="http://wikivizmap.herokuapp.com"> visualization project</a> using d3.js to show a visual node-cloud relationship between wikipeidia articles.
+				<div class="col-md-8 col-md-offset-2 about-summary">
+					<p>Hiya.  I live in San Francisco and am a software engineer interested in front-end web development, with a little backend thrown in now and then to keep things intersting. I'm entering the third year of new life as a web developer.</p>
 
-					My programming experience spans my background in Materials Science and Computational Fluid Dynamics, topics of my Ph.D. research at UC Berkeley, in which I modeled liquid metal systems. Programming was one of the most enjoyable parts of my engineering career: writing custom functions to extend commercial simulation software, data analysis in Matlab, Scheme scripts for automatizing post-processing visualization of fluid flow simulations, and I can even recall a few FORTRAN scripts in Engineering classes.</p>
+					<p> In my first development role, building the front-end of a cordova app and internal and enterprise desktop apps at <a href="ziploop.com">Ziploop</a>, I mastered the essentials of web development and building a great user experience.  I earned the trust of the President and CTO and was creating  design sketches in Illustator and coding them up in Angular.  When I needed a change of pace I worked in our node-mongo backend, super satisfying to get involved in the entire stack from ideation to api.</p>
 
-					<p>What was missing in all this fun was a personal connection to the systems I was analyzing.  Enter JavaScript and web development. I realized that I could take my programming experience and apply it to build something visual and personally tangible. </p>
 
-					<p>I love the logic of software development and the challenge of finding the best tools and algorithms to build amazing things.</p>
+					<p>I'm currently at <a href="https://talentbin.com">Talentbin by Monster</a> taking a slightly different turn to beef up my experience in a different tech stack (java-php-javascript) and help bring some legacy code into the future.  I'm working with a supportive team that stresses learning and collaborative coding and I'm enjoying the exposure to great tech discussions and the opportunities to implement cleaner, more fun, maintainable front-end architecture.</p>
 
-					<p>Read more about my recent coding experiences on  <a href="http://blog.nmutua.com">my blog</a></p>
+					<!-- I recently worked on a mobile app called <a href="http://signup.plentyy.com">Plentyy</a>, (to be released in the App store Q2 2014) and a Wikipedia <a href="http://wikivizmap.herokuapp.com"> visualization project</a> using d3.js to show a visual node-cloud relationship between wikipeidia articles. -->
+
+					<p>My programming experience spans my background in Materials Science and Computational Fluid Dynamics, topics of my Ph.D. research at UC Berkeley, in which I modeled liquid metal systems. Programming was one of the most enjoyable parts of my engineering career: writing custom functions to extend commercial simulation software, data analysis in Matlab, Scheme scripts for automatizing post-processing visualization of fluid flow simulations -- I can even recall a few FORTRAN scripts in Engineering classes. :)</p>
+
+					<p>What was missing in my academic career was a personal connection to the systems I was analyzing.  Enter JavaScript and web development. I realized that I could take my programming experience and apply it to build something visual and personally tangible. </p>
+
+					<!-- <p>I love the logic of software development and the challenge of finding the best tools and algorithms to build amazing things.</p> -->
+
+					<!-- <p>Read more about my recent coding experiences on  <a href="http://blog.nmutua.com">my blog</a></p> -->
 					<!-- <p><button type="button" class="btn btn-warning">I HAVE A FREELANCE JOB</button></p> -->
 				</div>								
 			</div>
@@ -155,15 +162,15 @@
 				<div class="col-lg-6 col-lg-offset-3">
 					<h2> Autumn Fjeld </h2>
 					<p><a href="http://nmutua.com/assets/resume/AutumnFjeld_Resume.pdf" target="_blank">resume</a></p>
-					<p> <a href="http://nmutua.com/assets/resume/AutumnFjeld_Resume.pdf" target="_blank"> autumn@nmutua.com </a></p>
+					<p> <a href="mailto:autumn@nmutua.com" target="_blank"> autumn@nmutua.com </a></p>
           <div class="contact-icons">
             <a href="https://twitter.com/autaut" target="_blank">
               <i class="icon-twitter"></i></a>
             <a href="https://github.com/autumnfjeld" target="_blank">
               <i class="fa fa-github-alt"></i></a>
-            <a href="mailto:autumn@nmutua.com" target="_blank">
+            <a href="mailto:autumnfjeld@gmail.com" target="_blank">
               <i class="icon-envelope"></i></a>
-            <a href="https://www.linkedin.com/profile/view?id=7000522&trk=nav_responsive_tab_profile" target="_blank">
+            <a href="https://www.linkedin.com/in/autumnfjeld" target="_blank">
               <i class="fa fa-linkedin-square"></i></a>
             <a href="http://nmutua.com/assets/resume/AutumnFjeld_Resume.pdf" target="_blank">
               <i class="fa fa-bullseye"></i></a>
