Project and text updated

--- a/index.html
+++ b/index.html
@@ -94,11 +94,13 @@
 		<div class="container">
 			<div class="row">
 				<h3>ABOUT ME</h3>
-				<div class="centered icons"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></div>
+				<div class="centered icons">
+					<i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i>
+					</div>
 				
 				<!-- INTRO INFORMATIO-->
 				<div class="col-md-8 col-md-offset-2 about-summary">
-					<p>Hiya.  I live in San Francisco and am a software engineer interested in front-end web development, with a little backend thrown in now and then to keep things intersting. I'm entering the third year of new life as a web developer.</p>
+					<p>Hiya.  I live in San Francisco and am a software engineer interested in front-end web development, with a little backend thrown in now and then to keep things intersting. I changed careers a few years ago, from an engineer of the physical realm to an engineer of the virtual realm, so to speak.</p>
 
 					<p> In my first development role, building the front-end of a cordova app and internal and enterprise desktop apps at <a href="ziploop.com">Ziploop</a>, I mastered the essentials of web development and building a great user experience.  I earned the trust of the President and CTO and was creating  design sketches in Illustator and coding them up in Angular.  When I needed a change of pace I worked in our node-mongo backend, super satisfying to get involved in the entire stack from ideation to api.</p>
 
@@ -107,7 +109,7 @@
 
 					<!-- I recently worked on a mobile app called <a href="http://signup.plentyy.com">Plentyy</a>, (to be released in the App store Q2 2014) and a Wikipedia <a href="http://wikivizmap.herokuapp.com"> visualization project</a> using d3.js to show a visual node-cloud relationship between wikipeidia articles. -->
 
-					<p>My programming experience spans my background in Materials Science and Computational Fluid Dynamics, topics of my Ph.D. research at UC Berkeley, in which I modeled liquid metal systems. Programming was one of the most enjoyable parts of my engineering career: writing custom functions to extend commercial simulation software, data analysis in Matlab, Scheme scripts for automatizing post-processing visualization of fluid flow simulations -- I can even recall a few FORTRAN scripts in Engineering classes. :)</p>
+					<p>My programming experience spans my background in Materials Science and Computational Fluid Dynamics, topics of my Ph.D. research at UC Berkeley, in which I modeled liquid metal systems. Programming was one of the most enjoyable parts of my engineering career: writing custom functions to extend commercial simulation software, data analysis in Matlab, Scheme scripts for automatizing post-processing visualization of fluid flow simulations &mdash; I can even recall a few FORTRAN scripts in Engineering classes. :)</p>
 
 					<p>What was missing in my academic career was a personal connection to the systems I was analyzing.  Enter JavaScript and web development. I realized that I could take my programming experience and apply it to build something visual and personally tangible. </p>
 
@@ -125,27 +127,36 @@
   <div id="portfoliowrap">
     <div class="container">
       <div class="row mt">
-        <h3 class="centered">RECENT PROJECTS</h3>
-        <p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
+        <h3 class="centered">PERSONAL PROJECTS</h3>
+        <p class="centered icons">
+        	<i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i>
+        </p>
         
     		<div class="col-lg-4 centered si blurb">
     			<a href="http://youtu.be/AN4371oQ8So" target="_blank">
     			<h4>Plentyy Mobile App</h4>
-    			<p>A mobile app to connect users with last-minute deals offerd by local merchants. Available in Apple App Store Q2 2014.  Built with AngularJS, Ionic, Cordova with Firebase data storage.</p>
+    			<p>A mobile app to connect users with last-minute deals offerd by local merchants. Built while at HackReactor, contract work for an MVP app.  Built with AngularJS, Ionic, Cordova with Firebase data storage.</p>
           </a>
     		</div>
     		<div class="col-lg-4 centered si blurb">
     			<a href="http://wikivizmap.herokuapp.com" target="_blank">
     			<h4>WikiViz</h4>
-    			<p>A Graph Visualization of Wikipedia Articles and their Embedded Links. Front end built in AngularJS and d3.js with a backend scraper to extract links from a given Wikipedia page. </p>
+    			<p>A Graph Visualization of Wikipedia Articles and their Embedded Links. Front end built in AngularJS and d3.js with a backend scraper to extract links from a given Wikipedia page.</p>
           </a>
     		</div>
+    		<div class="col-lg-4 centered si blurb">
+          <a href="https://mosaic-node-server.herokuapp.com/" target="_blank">
+    			<h4> Mosaic Project</h4>
+    			<p>Mosaic project to turn an uploaded photo into a mosaic. Learning project on webworkers, html canvas, and fancy promises.	</p>
+          </a>
+    		</div>  
+<!-- 
     		<div class="col-lg-4 centered si blurb">
           <a href="http://politicalpoke.nmutua.com" target="_blank">
     			<h4>Hackathon Project</h4>
     			<p>Web application built in AngularJS wired to New York Times API to pull candidate campaign contribution data for a specified politician. An evolving personal project.</p>
           </a>
-    		</div>    	   	
+    		</div>  -->   	   	
     	</div><!-- /row -->
     </div><!-- /container -->
   </div>
@@ -157,7 +168,9 @@
 		<div class="container">
 			<div class="row">
 				<h3>CONTACT ME</h3>
-				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
+				<p class="centered icons">
+					<i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i>
+					</p>
 				<br>
 				<div class="col-lg-6 col-lg-offset-3">
 					<h2> Autumn Fjeld </h2>
