Update resume link & assests

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <a href="#portfolio" class="smoothScroll">Projects</a>
 			<!-- <a href="http://blog.nmutua.com" class="smoothScroll">Blog</a> -->
 
-      <a href="http://nmutua.com/assets/resume/AutumnFjeld_Resume_2015_11.pdf" target="_blank" class="smoothScroll">Resume</a>
+      <a href="http://nmutua.com/assets/resume/AutumnFjeld_Resume.pdf" target="_blank" class="smoothScroll">R&eacute;sum&eacute;</a>
       <a href="#contact" class="smoothScroll">Contact</a>
 			<a href="https://twitter.com/autaut" target="_blank">
         <i class="icon-twitter"></i></a>
@@ -174,7 +174,7 @@
 				<br>
 				<div class="col-lg-6 col-lg-offset-3">
 					<h2> Autumn Fjeld </h2>
-					<p><a href="http://nmutua.com/assets/resume/AutumnFjeld_Resume.pdf" target="_blank">resume</a></p>
+					<p><a href="http://nmutua.com/assets/resume/AutumnFjeld_Resume.pdf" target="_blank">r&eacute;sum&eacute;</a></p>
 					<p> <a href="mailto:autumn@nmutua.com" target="_blank"> autumn@nmutua.com </a></p>
           <div class="contact-icons">
             <a href="https://twitter.com/autaut" target="_blank">
