Add updated date

--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
 				<h3>CONTACT ME</h3>
 				<p class="centered icons">
 					<i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i>
-					</p>
-				<br>
+				</p>
 				<div class="col-lg-6 col-lg-offset-3">
 					<h2> Autumn Fjeld </h2>
 					<p><a href="http://nmutua.com/assets/resume/AutumnFjeld_Resume.pdf" target="_blank">r&eacute;sum&eacute;</a></p>
@@ -189,7 +188,8 @@
               <i class="fa fa-bullseye"></i></a>
           </div>
           <br>
-					<p class="blacktie"><a href="http://blacktie.co" target="_blank">BlackTie credits</a> for the structure of this site.</>
+					<p class="blacktie"><a href="http://blacktie.co" target="_blank">BlackTie credits</a> for the structure of this site.</p>
+					<p class="updated"> Updated September 2016 </p>
 				</div>
 			</div>
 		</div>
